cc : Fix layer transform changed tracking bug

One of the functions makes changes on a local copy of property trees
instead of the property trees stored on LayerTreeImpl. This fixes that.

BUG=597143
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1834883002

Cr-Commit-Position: refs/heads/master@{#383219}

Former-commit-id: 516062893e27d20dcec188a67af3a0e0c28dc902